fix track/artist overflow in grid view

--- a/src/styles/components/recently_played.module.sass
+++ b/src/styles/components/recently_played.module.sass
@@ -38,14 +38,22 @@
     .info
       display: flex
       flex-direction: column
-      align-items: center
       gap: 0.5rem
+      text-align: center
+      max-width: 150px
 
       a
+        display: block
+        white-space: nowrap
+        overflow: hidden
+        text-overflow: ellipsis
         text-decoration: none
 
         &:hover
           text-decoration: underline
+
+      .track-name
+        font-weight: 700
 
 .list
   border-collapse: collapse
